Btn comp, Product comp, page shop

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -13,6 +13,8 @@
 :root {
   --primary: #45cfbe;
   --outline: #00d1b7;
+  --black-363636: #363636;
+  --green: #00a28e;
 
   // font
   --ff-poppins: "Poppins";
