--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -76,6 +76,10 @@ ol {
   width: 100%;
 }
 
+.h-100 {
+  height: 100%;
+}
+
 .w-max {
   width: max-content;
 }
@@ -206,6 +210,10 @@ ol {
 
 .flex.justify-between {
   justify-content: space-between;
+}
+
+.flex.justify-center {
+  justify-content: center;
 }
 
 .flex.align-center {
