--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -24,6 +24,14 @@
   width: 100%;
 }
 
+.sale-tag {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+}
+
 .label {
   text-align: center;
   display: block;
