--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -9,7 +9,7 @@
   line-height: 22.5px;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.35);
   letter-spacing: 1px;
-  margin-top: 12px;
+  // margin-top: 12px;
   transition: all 0.3s;
 }
 
