--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -60,6 +60,7 @@ ol {
 // Common
 .section-1200 {
   min-width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -133,6 +134,10 @@ ol {
 
 .mr-8 {
   margin-right: 8px;
+}
+
+.mr-20 {
+  margin-right: 20px;
 }
 
 .mt-0 {
