--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,4 +1,6 @@
 .wrapper {
+  text-align: center;
+
   font-size: 1.5rem;
   background-color: #000;
   color: #fff;
@@ -22,4 +24,11 @@
   font-size: 1.2rem;
   padding: 10px 25px;
   background-color: var(--black-363636);
+}
+
+.large {
+  width: 75%;
+  font-size: 1.4rem;
+  font-weight: 500;
+  letter-spacing: 0.5px;
 }
