--- a/src/components/Price/Price.module.scss
+++ b/src/components/Price/Price.module.scss
@@ -1,5 +1,4 @@
 .price-wrapper {
-  margin: 15px 0;
   position: relative;
 
   .price {
@@ -9,6 +8,8 @@
 
   .old-price {
     position: absolute;
+    display: block;
+    width: max-content;
     top: 3px;
     left: 80px;
     font-weight: 500;
