--- a/src/layouts/components/Header/SiteHeader.module.scss
+++ b/src/layouts/components/Header/SiteHeader.module.scss
@@ -106,7 +106,6 @@
   .icon {
     font-size: 2.4rem;
     font-weight: 600;
-    padding: 12px 16px;
     cursor: pointer;
     margin-right: 4px;
     transition: all 0.3s;
@@ -118,8 +117,8 @@
 
   .quantity {
     position: absolute;
-    top: -7px;
-    right: 14px;
+    top: 12px;
+    right: 9px;
     content: "";
     display: block;
     width: 20px;
@@ -184,4 +183,92 @@
 
 .breadcrumb__list {
   display: flex;
+}
+
+// Cart
+.icon-wrapper {
+  padding: 20px 10px;
+}
+
+.cart-wrapper {
+  position: relative;
+
+  &:hover .cart {
+    display: block;
+  }
+}
+
+.cart {
+  position: absolute;
+  display: none;
+  right: 0;
+  width: 380px;
+  background-color: #fff;
+  padding: 22px;
+  z-index: 999;
+  right: 16px;
+  top: 65px;
+  right: 0;
+  box-shadow: -2px 2px 25px -8px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+}
+
+.cart-heading {
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  letter-spacing: 1px;
+  margin-bottom: 24px;
+  font-weight: 400;
+}
+
+.cart-item {
+  margin-top: 20px;
+  &::after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 25px;
+    background-color: #88868662;
+    margin-top: 15px;
+  }
+}
+.item-info {
+  display: flex;
+}
+.item-img {
+  margin-right: 15px;
+  width: 80px;
+  height: 80px;
+  border: 1px solid #e1e1e1;
+}
+.item-heading {
+  font-size: 1.5rem;
+  line-height: 1.4;
+  font-weight: 500;
+}
+
+.variation-wrapper {
+  text-align: right;
+  font-size: 1.4rem;
+  line-height: 2rem;
+  color: #888686;
+}
+.item-price {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.quantity-price {
+  display: flex;
+}
+
+.item-quantity {
+  margin-right: 4px;
+}
+.sub-total {
+}
+
+.total-price {
+  font-weight: 600;
+  font-size: 1.5rem;
 }
