--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -11,7 +11,6 @@
   line-height: 22.5px;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.35);
   letter-spacing: 1px;
-  // margin-top: 12px;
   transition: all 0.3s;
 }
 
@@ -31,4 +30,33 @@
   font-size: 1.4rem;
   font-weight: 500;
   letter-spacing: 0.5px;
+}
+
+.wrapper.header {
+  font-weight: 600;
+  color: #fff;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border-radius: 0;
+  box-shadow: none;
+}
+
+.primary {
+  background-color: var(--primary);
+}
+
+.bold {
+  font-weight: 600;
+}
+
+.styleLink {
+  color: var(--primary);
+  text-decoration: underline;
+  padding: 0;
+  background-color: transparent;
+  box-shadow: none;
+  font-size: 1.6rem;
+  font-weight: inherit;
+  line-height: 1.4;
 }
