--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -155,6 +155,10 @@ ol {
   margin-top: 10px !important;
 }
 
+.mt-15 {
+  margin-top: 15px !important;
+}
+
 .mt-20 {
   margin-top: 20px !important;
 }
