--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -15,6 +15,7 @@
   --outline: #00d1b7;
   --black-363636: #363636;
   --green: #00a28e;
+  --green-dark: #00a28e;
 
   // font
   --ff-poppins: "Poppins";
@@ -236,4 +237,11 @@ ol {
   align-items: center;
 }
 
-// Button
+// font-size
+.fs-12 {
+  font-size: 1.2rem;
+}
+
+.fs-14 {
+  font-size: 1.4rem;
+}
