--- a/src/components/Price/Price.module.scss
+++ b/src/components/Price/Price.module.scss
@@ -7,19 +7,19 @@
   }
 
   .old-price {
-    position: absolute;
-    display: block;
     width: max-content;
-    top: 3px;
     left: 80px;
     font-weight: 500;
     color: #9e9e9e;
     font-size: 1.4rem;
+    margin-left: 4px;
     text-decoration: line-through;
   }
 
   .old-price.pos-shop {
+    display: block;
     left: 185px;
+    top: 3px;
   }
 
   .new-price {
