checkout page UI

--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -110,7 +110,7 @@ td[class*="subtotal"] {
   padding-left: 20px;
 }
 
-.total-item {
+.total-field {
   display: flex;
   align-items: center;
   justify-content: space-between;
