--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -204,6 +204,14 @@ ol {
   margin-bottom: 100px;
 }
 
+.pl-10 {
+  padding-left: 10px;
+}
+
+.pr-10 {
+  padding-right: 10px;
+}
+
 .pb-20 {
   padding-bottom: 20px;
 }
@@ -215,6 +223,14 @@ ol {
 /* display */
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
 
 .flex {
