--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -32,3 +32,27 @@
     border-color: var(--outline);
   }
 }
+
+.selection {
+  display: block;
+  height: 45px;
+  padding: 10px 15px;
+  color: #888686;
+  background-color: transparent;
+  border: 1px solid #e1e1e1;
+  border-radius: var(--rounded-full);
+  font-family: var(--ff-poppins);
+  width: 100%;
+  margin-top: 10px;
+}
+
+.text-area {
+  display: block;
+  padding: 10px 15px;
+  color: #888686;
+  background-color: transparent;
+  border: 1px solid #e1e1e1;
+  border-radius: 8px;
+  width: 100%;
+  margin-top: 10px;
+}
