customer orders, details UI

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -109,6 +109,10 @@ ol {
   text-align: right !important;
 }
 
+.text-left {
+  text-align: left !important;
+}
+
 .text-green {
   color: var(--green);
 }
