--- a/src/pages/Shop/Shop.module.scss
+++ b/src/pages/Shop/Shop.module.scss
@@ -7,6 +7,14 @@
     margin-right: 10px;
     padding: 15px;
     font-size: 1.6rem;
+    opacity: 0.5;
     cursor: pointer;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+  li.active {
+    opacity: 1;
   }
 }
