--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -11,11 +11,11 @@
 }
 
 :root {
-  --primary: #45cfbe;
+  --primary: rgb(69, 207, 190);
   --outline: #00d1b7;
   --black-363636: #363636;
   --green: #00a28e;
-  --green-dark: #00a28e;
+  --green-dark: rgb(0, 162, 142);
 
   // font
   --ff-poppins: "Poppins";
@@ -28,6 +28,7 @@ html {
   font-size: 62.5%;
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -264,4 +265,8 @@ ol {
 
 .fs-14 {
   font-size: 1.4rem;
+}
+
+.App {
+  position: relative;
 }
