--- a/src/components/Price/Price.module.scss
+++ b/src/components/Price/Price.module.scss
@@ -1,30 +1,37 @@
-.price-wrapper {
-  position: relative;
+// default
+.price {
+  font-weight: 600;
+  color: var(--green);
+}
 
-  .price {
-    font-weight: 600;
-    color: var(--green);
-  }
+.old-price {
+  width: max-content;
+  left: 80px;
+  font-weight: 500;
+  color: #9e9e9e;
+  font-size: 1.4rem;
+  margin-left: 4px;
+  text-decoration: line-through;
+}
 
-  .old-price {
-    width: max-content;
-    left: 80px;
-    font-weight: 500;
-    color: #9e9e9e;
-    font-size: 1.4rem;
-    margin-left: 4px;
-    text-decoration: line-through;
-  }
+.new-price {
+  font-weight: 600;
+  color: #d7422d;
+  font-size: 1.6rem;
+}
 
-  .old-price.pos-shop {
-    display: block;
-    left: 185px;
-    top: 3px;
-  }
+// pos__shop
 
-  .new-price {
-    font-weight: 600;
-    color: #d7422d;
-    font-size: 1.6rem;
-  }
+// old_new_price
+.new-price.old_new_price {
+  font-size: 1.5rem;
+  margin-left: 8px;
+}
+
+.old-price.old_new_price {
+  font-size: 1.3rem;
+}
+
+.fs_15 {
+  font-size: 1.5rem;
 }
