--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -3,7 +3,8 @@
   line-height: 42px;
   border-radius: var(--rounded-full);
   border: 1px solid #ccc;
-  padding: 0 20px;
+  padding-left: 15px;
+  padding-right: 40px;
   font-family: var(--ff-poppins);
   letter-spacing: 0.5px;
   transition: all 0.3s;
@@ -13,8 +14,33 @@
   }
 }
 
+.icon {
+  position: absolute;
+  top: 13.5px;
+  right: 10px;
+  color: #888686;
+}
+
+.icon.xmark {
+}
+
+.icon.spinner {
+  animation: rotate 1s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .list {
   position: absolute;
+  z-index: 9999;
+  //   display: none;
   width: 400px;
   background-color: #fff;
   border-radius: 4px;
