--- a/src/components/Category/Category.module.scss
+++ b/src/components/Category/Category.module.scss
@@ -1,8 +1,5 @@
 .parent {
   padding-bottom: 20px;
-  .icon {
-    font-size: 1.4rem;
-  }
 }
 
 .heading {
@@ -14,10 +11,36 @@
 .list {
   padding-top: 10px;
   padding-left: 15px;
+  overflow: hidden;
+  max-height: 500px;
+  transition: max-height 0.3s ease; /* Transition only max-height for smooth animation */
+
+  &.opened {
+    max-height: 500px; /* A large value, or use an appropriate value based on your content */
+  }
+
+  &.closed {
+    max-height: 0; /* A large value, or use an appropriate value based on your content */
+  }
 
   li {
     font-size: 1.4rem;
     padding-bottom: 10px;
     line-height: 21px;
   }
+}
+
+.icon {
+  font-size: 1.4rem;
+  cursor: pointer;
+  transform: rotate(0);
+  transition: transform 0.3s ease;
+}
+
+.icon.opened {
+  transform: rotate(90deg); /* Corrected rotation syntax */
+}
+
+.icon.closed {
+  transform: rotate(-90deg); /* Corrected rotation syntax */
 }
