handle filter color

--- a/src/layouts/components/Sidebar/Sidebar.module.scss
+++ b/src/layouts/components/Sidebar/Sidebar.module.scss
@@ -8,6 +8,7 @@
   line-height: 1.4;
   font-weight: 500;
   margin-bottom: 30px;
+  text-transform: uppercase;
 }
 
 .separate {
@@ -15,5 +16,5 @@
   height: 1px;
   background-color: #888686;
   display: block;
-  margin: 40px 0;
+  margin: 20px 0;
 }
