--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -16,6 +16,7 @@
   --black-363636: #363636;
   --green: #00a28e;
   --green-dark: rgb(0, 162, 142);
+  --gray: #e1e1e1;
 
   // font
   --ff-poppins: "Poppins";
