--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -6,10 +6,14 @@
   margin-bottom: 10px;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.08);
   transition: all 0.3s;
-}
 
-.product-item:hover {
-  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.08);
+  &:hover {
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.08);
+  }
+
+  &:hover .icon {
+    opacity: 1;
+  }
 }
 
 .product-wrapper {
@@ -65,4 +69,18 @@
 
 .product-item:hover .buy-btn-wrapper {
   opacity: 1;
+}
+
+.icon {
+  position: absolute;
+  opacity: 0;
+  right: 15px;
+  top: 15px;
+  transition: all 0.3s;
+  font-size: 1.8rem;
+  cursor: pointer;
+
+  &:hover {
+    color: var(--primary);
+  }
 }
