--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -251,6 +251,10 @@ ol {
   justify-content: space-between;
 }
 
+.flex.justify-around {
+  justify-content: space-around;
+}
+
 .flex.justify-center {
   justify-content: center;
 }
