--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -18,6 +18,7 @@
   color: #333;
   font-size: 1.4rem;
   background-color: transparent;
+  background-color: #fff;
   border: 1px solid #e1e1e1;
   border-radius: 2rem;
   padding: 0 20px;
