--- a/src/layouts/components/Footer/Footer.module.scss
+++ b/src/layouts/components/Footer/Footer.module.scss
@@ -1,5 +1,31 @@
-.wrapper {
+.join-discount {
   margin-top: 100px;
+  height: 80px;
+  background-color: var(--primary);
+  display: flex;
+  align-items: center;
+}
+
+.new-letter {
+  color: #fff;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.discount {
+  color: #fff;
+  margin-top: 10px;
+  display: block;
+  font-size: 1.3rem;
+}
+
+.input-wrapper {
+  width: 286px;
+  padding: 0 10px;
+}
+
+.wrapper {
+  margin-top: 50px;
 }
 
 .branch-heading {
