--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,27 +1,5 @@
 .carousel {
   text-align: center;
-  position: relative;
-}
-
-.stack {
-  position: absolute;
-  left: 80px;
-  z-index: 100;
-  background-color: transparent;
-  opacity: 1;
-  border: 5px solid #fff;
-}
-
-.stack-wrapper {
-  height: 462px;
-  opacity: 0;
-  background-color: #fff;
-}
-
-.wrapper {
-  display: flex;
-  justify-content: space-between;
-  padding: 0 40px;
 }
 
 .heading {
@@ -34,4 +12,44 @@
 .img {
   height: 55px;
   padding: 20px 0;
+}
+
+.content {
+  position: relative;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.wrapper {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: calc((100% / 3) - 11px);
+  gap: 30px;
+  overflow: hidden;
+}
+
+.icon {
+  color: var(--primary);
+  background-color: #fff;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  border-radius: var(--rounded-full);
+  cursor: pointer;
+}
+
+.left-btn {
+  left: -20px;
+  top: 100px;
+  z-index: 100;
+}
+
+.right-btn {
+  right: -20px;
+  top: 100px;
+  z-index: 100;
 }
