handle sort product by category

--- a/src/components/Category/Category.module.scss
+++ b/src/components/Category/Category.module.scss
@@ -30,6 +30,15 @@
   }
 }
 
+.item {
+  display: block;
+  transition: all 0.3s;
+
+  &:hover {
+    color: var(--green);
+  }
+}
+
 .icon {
   font-size: 1.4rem;
   cursor: pointer;
