--- a/src/components/Selection/Selection.module.scss
+++ b/src/components/Selection/Selection.module.scss
@@ -27,6 +27,7 @@
   font-size: 1.4rem;
   border: 1px solid #ccc;
   border-radius: 999px;
+  user-select: none;
 
   .icon {
     position: absolute;
