product state: sale, invalid, sold out

--- a/src/components/Selection/Selection.module.scss
+++ b/src/components/Selection/Selection.module.scss
@@ -28,6 +28,7 @@
   border: 1px solid #ccc;
   border-radius: 999px;
   user-select: none;
+  cursor: pointer;
 
   .icon {
     position: absolute;
