--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -18,10 +18,13 @@
 
 .product-wrapper {
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.08);
-  //   position: absolute;
   z-index: 10;
   padding-bottom: 20px;
   text-align: center;
+}
+
+.img-wrapper {
+  position: relative;
 }
 
 .img {
@@ -34,6 +37,7 @@
   position: absolute;
   top: 5px;
   left: 5px;
+  z-index: 100;
 }
 
 .label {
@@ -82,5 +86,64 @@
 
   &:hover {
     color: var(--primary);
+  }
+}
+
+// state
+.img-wrapper.invalid {
+  cursor: default;
+  &::before {
+    content: "Invalid";
+    display: block;
+    position: absolute;
+    top: 40%;
+    left: 35%;
+    font-size: 2rem;
+    font-weight: 600;
+    rotate: (45deg);
+    background-color: rgba(255, 0, 0, 0.1);
+    padding: 10px;
+    color: red;
+    letter-spacing: 1.2px;
+    border: 5px solid rgba(255, 0, 0, 0.7);
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.img-wrapper.soldOut {
+  &::before {
+    content: "Sold Out";
+    display: block;
+    position: absolute;
+    top: 40%;
+    left: 35%;
+    font-size: 2rem;
+    font-weight: 600;
+    rotate: (45deg);
+    background-color: rgba(255, 0, 0, 0.1);
+    padding: 10px;
+    color: red;
+    letter-spacing: 1.2px;
+    border: 5px solid rgba(255, 0, 0, 0.7);
+  }
+}
+
+.product-body.invalid {
+  opacity: 0.3;
+  user-select: none;
+  cursor: default;
+
+  a {
+    cursor: default;
   }
 }
