--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -158,6 +158,10 @@ ol {
   margin-top: 0px !important;
 }
 
+.mt-5 {
+  margin-top: 5px !important;
+}
+
 .mt-10 {
   margin-top: 10px !important;
 }
