--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -63,3 +63,10 @@
   font-style: italic;
   font-size: 1.3rem;
 }
+
+.notEditable {
+  color: #888686;
+  &:focus {
+    border: 1px solid #e1e1e1;
+  }
+}
