--- a/src/components/CarouselItem/CarouselItem.module.scss
+++ b/src/components/CarouselItem/CarouselItem.module.scss
@@ -1,6 +1,16 @@
 .wrapper {
   width: 100%;
+
+  &:hover .img {
+    filter: grayscale(0);
+  }
+
+  &:hover .icon {
+    top: 50%;
+    opacity: 0.7;
+  }
 }
+
 .body {
   display: flex;
   flex-direction: column;
@@ -8,9 +18,25 @@
   padding-top: 20px;
   padding-bottom: 30px;
 }
+
 .img {
   width: 100%;
+  filter: grayscale(0.7);
+  transition: all 0.5s ease;
+  cursor: pointer;
 }
+
+.icon {
+  color: #fff;
+  opacity: 0;
+  position: absolute;
+  font-size: 32px;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.5s ease;
+}
+
 .link {
   text-transform: uppercase;
   font-size: 1.2rem;
@@ -18,6 +44,7 @@
   letter-spacing: 0.7px;
   font-weight: 500;
   line-height: 27px;
+  cursor: pointer;
 }
 .heading {
   width: 275px;
@@ -30,6 +57,7 @@
   -webkit-font-smoothing: auto;
   letter-spacing: 0.5px;
   line-height: 1.4;
+  cursor: pointer;
 }
 .desc {
   font-size: 1.3rem;
