--- a/src/pages/Shop/Shop.module.scss
+++ b/src/pages/Shop/Shop.module.scss
@@ -17,13 +17,14 @@
 .sorting {
   display: inline-block;
   position: relative;
-
+  user-select: none;
   line-height: 42px;
   margin-bottom: 10px;
 }
 
 .dropdown-component {
   position: absolute;
+  display: none;
   z-index: 101;
   right: 220px;
 }
