add some data, optimize filter product by category

--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -47,6 +47,10 @@
   color: #888686;
   height: 20px;
   margin-top: 15px;
+
+  &::first-letter {
+    text-transform: uppercase;
+  }
 }
 
 .heading {
