fix choose variant in product details

--- a/src/components/Selection/Selection.module.scss
+++ b/src/components/Selection/Selection.module.scss
@@ -61,5 +61,10 @@
     &:hover {
       background-color: #e4e0e0;
     }
+
+    &.noAvailable {
+      opacity: 0.5;
+      cursor: default;
+    }
   }
 }
