final home page

--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,6 +1,5 @@
 .carousel {
   text-align: center;
-  position: relative;
 }
 
 .heading {
@@ -55,14 +54,14 @@
 }
 
 .left-btn {
-  left: 355px;
-  top: 185px;
+  left: -20px;
+  top: 21%;
   z-index: 100;
 }
 
 .right-btn {
-  right: 355px;
-  top: 185px;
+  right: -20px;
+  top: 21%;
   z-index: 100;
 }
 
