--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -142,6 +142,14 @@ ol {
 }
 
 /* margin, padding */
+.m-auto {
+  margin: auto;
+}
+
+.fit-content {
+  width: fit-content;
+}
+
 .ml-10 {
   margin-left: 10px;
 }
