--- a/src/layouts/components/Header/components/Breadcrumb/Breadcrumb.module.scss
+++ b/src/layouts/components/Header/components/Breadcrumb/Breadcrumb.module.scss
@@ -25,4 +25,18 @@
 
 .breadcrumb__list {
   display: flex;
+  justify-content: center;
+
+  li {
+    &::after {
+      content: ">";
+      display: inline-block;
+    }
+
+    &:last-child {
+      &::after {
+        content: "";
+      }
+    }
+  }
 }
