fix cart page, details page

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -17,7 +17,7 @@
 
 .wrapper.active {
   &:active {
-    background-color: var(--green) !important;
+    background-color: var(--primary) !important;
   }
 }
 
