--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -8,6 +8,7 @@
     rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px,
     rgba(240, 46, 170, 0.05) 0px 25px;
   margin: 0 auto;
+  position: relative;
 }
 
 .heading {
@@ -16,4 +17,10 @@
   font-weight: 300;
   margin-top: 15px;
   margin-bottom: 30px;
+}
+
+.note {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
